asiainfo_spark added to tar